# Xhart

./: .gitignore  Cargo.toml  LICENSE
src/registration/: Cargo.toml  user_repository.rs
src/registration/scripts/: watch.rs
src/registration/src/: lib.rs  main.rs
src/registration/src/application/: abstract_handler.rs  abstract_use_case.rs  mod.rs  subscribe.rs  subscriber.rs  user.rs
src/registration/src/application/user/: commands.rs  information.rs  queries.rs  subscribe.rs
src/registration/src/application/user/commands/: subscribe.rs
src/registration/src/application/user/queries/: id.rs
src/registration/src/domain/: abstract_entity.rs  abstract_repository.rs  mod.rs  subscriber.rs  user.rs
src/registration/src/domain/events/: abstract_event.rs  mod.rs  subscriber.rs  user.rs
src/registration/src/domain/rules/: abstract_rule.rs  error.rs  mod.rs  subscriber_email_must_be_unique.rs  subscriber_email_must_be_valid.rs  user_email_must_be_unique.rs  user_email_must_be_valid.rs
src/registration/src/domain/user/: email.rs  username.rs
src/registration/src/infrastructure/: api.rs  mod.rs  persistence.rs
src/registration/src/infrastructure/persistence/: in_memory.rs  postgres.rs
src/registration/tests/: health_check.rs
