[package]
name = "registration"
authors =["Alex Ngo"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "registration"

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
