[package]
name = "registration"
authors =["Alex Ngo"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "registration"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
mockall = "0.13.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v7", "serde"] }
